[gd_scene load_steps=6 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://fonts/MODES___.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 36
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 36
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 36
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
script/script = ExtResource( 1 )

[node name="TweenOut" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="TweenIn" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 1017.0
margin/bottom = 593.0

[node name="FadeOutButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 153.0
margin/top = 201.0
margin/right = 345.0
margin/bottom = 244.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fade Out"
flat = false

[node name="FadeInButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 153.0
margin/top = 265.0
margin/right = 345.0
margin/bottom = 308.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fade In"
flat = false

[node name="Label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 393.0
margin/top = 233.0
margin/right = 855.0
margin/bottom = 270.0
custom_fonts/font = SubResource( 3 )
text = "Just some random text"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Panel/FadeOutButton" to="." method="_onFadeOut"]

[connection signal="pressed" from="Panel/FadeInButton" to="." method="_onFadeIn"]


